--- a/example2.html
+++ b/example2.html
@@ -10,5 +10,16 @@ Drawing using HTML div tag and CSS style
   position: relative;
 "></div>
 
-<script src="https://raw.githubusercontent.com/dudung/LineChart.js/master/Pointdiv.js"></script>
+<script src="https://raw.githubusercontent.com/dudung/LineChart.js/master/Pointdiv.js">
+setparent("blank");
+setlinewidth(1);
+setlinecolor("red");
+circle(80, 100, 50);
+setlinewidth(2);
+setlinecolor("green");
+circle(150, 70, 50);
+setlinewidth(3);
+setlinecolor("blue");
+circle(220, 100, 50);
+</script>
 
